- bug 421 - hred goes through text rather than under it - use a border stylesheet attribute instead of the <hr> approach to draw the   one pixel border separating the web page from the ad space - set sl_top height to 100px - add a one pixel difference to the page alignment to compensate for the   sl_top border
git-svn-id: https://www.redhotpenguin.com/svn/sl/trunk@409 bd012f14-6cfe-0310-9a23-91b8f1fede10

--- a/proxyserver/css/sl.css
+++ b/proxyserver/css/sl.css
@@ -6,8 +6,9 @@
     left: 0px;
     padding: 0px 0px 0px 0px;
     margin: 0px 0px 0px 0px;
+    height: 50px;
     width: 100%;
-/*   border: solid 1px black; */
+   border-bottom: solid 1px black;
 }
 p.sl {
 /*    border: solid 1px black;  */
@@ -29,7 +30,7 @@ p.sl {
 
 #sl_ctr {
     position: relative;
-    top: 50px;
+    top: 51px;
 	margin-top: 0px
 }
 
